# beta_project

./: config.py  decorator_log.txt  pyproject.toml  test.txt
src/: converters.py  decorator.py  generators.py  hw_add_tasks.py  main.py  masks.py  pandas_HW.py  processing.py  utils.py  widget.py
tests/: test.txt  test2_json.json  test_converters.py  test_decorator.py  test_generators.py  test_hw_add_tasks.py  test_json.json  test_masks.py  test_pandas_HW.py  test_processing.py  test_utils.py  test_widget.py
tests/tests_data/: file.csv  test.txt  test_json3.json
